# Base_Date_Vacancy

./: .env.example  .evn  README.md  pyproject.toml
src/: api_service.py  config.py  create_db.py  database.ini  interface_by_hh.py  main.py  manager_db.py  vacancy_api.py
